added leetle tidbits of notes

--- a/A2_starter.ipynb
+++ b/A2_starter.ipynb
@@ -216,25 +216,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b348403e",
+   "id": "658f0d6e",
    "metadata": {},
    "source": [
     "#### for Rachel's reference\n",
     "\n",
+    "DOC1\n",
     "5c1dbe1d1e67d78e2797d611.txt\n",
     "\n",
-    "data/5c1dccbf1e67d78e279807d8.txt\n",
+    "DOC2\n",
+    "5c1dccbf1e67d78e279807d8.txt\n",
     "\n",
-    "data/5c1de1661e67d78e27984d34.txt\n",
+    "5c1de1661e67d78e27984d34.txt\n",
     "\n",
-    "data/5c1e0b68795bd2a5d03a49a9.txt\n",
+    "5c1e0b68795bd2a5d03a49a9.txt\n",
     "\n",
-    "data/5c1efb3d1e67d78e279bd39a.txt"
+    "5c1efb3d1e67d78e279bd39a.txt"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "02a36e9f",
+   "id": "7386e94c",
    "metadata": {},
    "source": [
     "#### for Antanila's reference\n",
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf2290b",
+   "id": "1def9e75",
    "metadata": {},
    "source": [
     "#### DOCUMENT 1 COREFERENCE CHAINS"
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b70d1148",
+   "id": "99bc8181",
    "metadata": {},
    "source": [
     "#### DOCUMENT 2 COREFERENCE CHAINS"
@@ -335,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5cafba1e",
+   "id": "8c2f5b25",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a182aa1c",
+   "id": "6df0851e",
    "metadata": {},
    "source": [
     "#### DOCUMENT 3 COREFERENCE CHAINS "
@@ -385,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e1b2c64d",
+   "id": "950175b1",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60e2473a",
+   "id": "ad48bb09",
    "metadata": {},
    "source": [
     "#### DOCUMENT 4 COREFERENCE CHAINS"
@@ -445,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "4dcc5ffc",
+   "id": "059b9418",
    "metadata": {
     "scrolled": true
    },
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aff0bd9",
+   "id": "2078b711",
    "metadata": {},
    "source": [
     "#### DOCUMENT 5 COREFERENCE CHAINS"
@@ -499,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "6a5dd34e",
+   "id": "b0d51f1c",
    "metadata": {},
    "outputs": [
     {
